<resources>
    <string name="app_name">Weather (L.Z)</string>
    <string name="min_degree">--</string>
    <string name="min">Min</string>
    <string name="current_degree">--</string>
    <string name="current">Current</string>
    <string name="max_degree">--</string>
    <string name="max">Max</string>
    <string name="current_state">__</string>
    <string name="open_weather_maps_app_id">76c849db49d081ab39654c7354e1fa04</string>
    <string name="place_not_found">place not fount</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_clear_night">Sunny</string>
    <string name="weather_thunder">Thunder</string>
    <string name="weather_drizzle">Drizzle</string>
    <string name="weather_foggy">Foggy</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_rainy">Rainy</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>
    <string name="add_favourite">Add favourite</string>
    <string name="add_city">Add City</string>

    <string name="enter_favourite_city">Enter favourite city</string>


</resources>