<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">





    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        
        
        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/current_city"
                android:gravity="center"
                android:textSize="30dp"
                android:text="@string/current_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/current_weather"
                android:gravity="center"
                android:textSize="25dp"
                android:text="@string/current_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <TextView
                android:id="@+id/description"
                android:textAllCaps="true"
                android:gravity="center"
                android:textSize="25dp"
                android:text="@string/current_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>







        </LinearLayout>




    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:background="@color/green"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:id="@+id/_degree"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">






            <TextView
                android:id="@+id/temp_min"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/min_degree"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/temp_current"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/current_degree"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/temp_max"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/max_degree"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>




        <LinearLayout
            android:id="@+id/_degree_naming"
            android:layout_below="@+id/_degree"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/min"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>


            <TextView
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/current"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>


            <TextView
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:gravity="center"
                android:text="@string/max"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <View
            android:id="@+id/view"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/_degree_naming"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        
        
        <ListView
            android:id="@+id/list"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </RelativeLayout>




</LinearLayout>